--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.error-input {
+  box-shadow: 0px 0px 2px 1px red;
+}
