--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,32 @@ code {
 .error-input {
   box-shadow: 0px 0px 2px 1px red;
 }
+
+.privacy li {
+  list-style: circle;
+}
+
+.privacy h1,
+.privacy h2 {
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.privacy h1 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.5rem /* 24px */;
+  line-height: 2rem /* 32px */;
+}
+
+.privacy h2 {
+  font-size: 1.25rem /* 20px */;
+  line-height: 1.75rem /* 28px */;
+}
+
+.privacy h3 {
+  margin-top: 2em;
+  text-decoration-line: underline;
+  font-size: 1.125rem /* 18px */;
+  line-height: 1.75rem /* 28px */;
+}
