--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,15 @@ code {
   font-size: 1.125rem /* 18px */;
   line-height: 1.75rem /* 28px */;
 }
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 -3 30 30" stroke-width="1" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" /></svg>')
+    white no-repeat 99% !important;
+}
+
+input[type="file"] {
+  display: none;
+}
