--- a/src/index.css
+++ b/src/index.css
@@ -84,5 +84,5 @@ input[type="file"] {
 }
 
 .modal {
-  @apply fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-10;
+  @apply fixed top-1/2 md:top-1/3 left-1/2 -translate-x-1/2 -translate-y-1/2 md:-translate-y-1/3 z-10;
 }
