--- a/src/index.css
+++ b/src/index.css
@@ -84,5 +84,5 @@ input[type="file"] {
 }
 
 .modal {
-  @apply fixed top-1/2 md:top-1/3 left-1/2 -translate-x-1/2 -translate-y-1/2 md:-translate-y-1/3 z-10;
+  @apply fixed top-1/2 md:top-1/3 left-1/2 -translate-x-1/2 -translate-y-1/2 md:-translate-y-1/3 z-10  text-zinc-300 py-12 px-12 w-1/2 min-w-fit h-fit bg-zinc-800 shadow-xl shadow-zinc-600 drop-shadow-xl border-zinc-600 rounded-md;
 }
