--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 html {
   height: 100vh;
   width: 100vw;
+  background: rgba(47, 37, 50, 1);
 }
 
 body {
@@ -85,4 +86,24 @@ input[type="file"] {
 
 .modal {
   @apply fixed top-1/2 md:top-1/3 left-1/2 -translate-x-1/2 -translate-y-1/2 md:-translate-y-1/3 z-10  text-zinc-300 py-12 px-12 w-1/2 min-w-fit h-fit bg-zinc-800 shadow-xl shadow-zinc-600 drop-shadow-xl border-zinc-600 rounded-md;
+}
+
+.login-background {
+  background: linear-gradient(
+    50deg,
+    rgba(113, 25, 96, 0.25) 0%,
+    rgba(47, 37, 50, 1) 35%,
+    rgba(47, 37, 50, 1) 65%,
+    rgba(105, 26, 109, 0.3) 100%
+  );
+}
+
+.main-background {
+  background: linear-gradient(
+    50deg,
+    rgba(113, 25, 96, 0.18) 0%,
+    rgba(47, 37, 50, 1) 30%,
+    rgba(47, 37, 50, 1) 70%,
+    rgba(105, 26, 109, 0.23) 100%
+  );
 }
